--- a/zodie.html
+++ b/zodie.html
@@ -7,7 +7,7 @@
 <tr>
 <td>
 <li><img src="fecioara1.jpg" height="100" witdh="100"><br></li>
-<li><embed src="exempluzodii.mp4" autostart="true" width="425" height="344"><br></li>
+<li><embed src="exempluzodii.mp4" hidden="false" autostart="true" width="425" height="344"><br></li>
 <li><a href="zodie.html" target="_new"><img src="fecioara1.jpg" height="100" witdh="100"><br>
 </li></td>
 <td>
